# Lec_14

./: pyproject.toml
skripts/: main.py
