[tool.poetry]
name = "lecs-14"
version = "0.1.0"
description = ""
authors = ["Bakhtiyar <cena61454@gmail.com>"]
readme = "README.md"
packages = [{include = "lecs_14"}]

[tool.poetry.dependencies]
python = "^3.10"
art = "^5.9"
numpy = "^1.24.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
